# makepdf

./: .gitignore  GEMINI.md  LICENSE  README.md  makepdf.sh  makepdf_launcher.sh  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-create-pdf-from-images/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-i-would-like/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-package-the-program/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-remove-ffmpeg-conversion/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/makepdf/: lib.py  main.py
tests/: test_installation.py  test_lib.py  test_main.py  test_main_cwd.py
