[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makepdf"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pypdf",
    "Pillow",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
makepdf = "makepdf.main:main"

[tool.hatch.build]
exclude = [
    "test_venv"
]